We have learnt how to create images and old plus links

--- a/index.html
+++ b/index.html
@@ -23,11 +23,18 @@
     <li> take a Bath</li>
     <li>Make breakfast</li>
 </ol>
+ <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Ullam quis nemo nisi voluptatibus, vel quae nam, beatae eum officiis quod assumenda pariatur culpa non quasi natus, deserunt excepturi molestiae ratione.</p>
 
+ <p>I <em> <strong>thought</strong></em> i was late for class <b>today</b> but am glad i made it</p>
 
+ <p>i love Chilled people 15<sup>th </sup>May today is a Lovely Day</p>
+<h4>I <i><b>love</b></i> Laughing</h4>
 
-
-
+<img src="tinah pic.jpg" width="200px">
+<img src="raheem.jpeg" width="200px">
+<img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQR-7WPU4cQOYiBJjg2-sawtynlViJsMC8L5FrxjGIp0hdPP-FNRHShcj61Xn5THlwsIkz75uMrmdLr2eYbGE3dGwm-Gn7Q7lXXaTfUn60St4O680SOuQxcwF8EJB6x1yufKDGlk7s&usqp=CAc">
+<a href="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQR-7WPU4cQOYiBJjg2-sawtynlViJsMC8L5FrxjGIp0hdPP-FNRHShcj61Xn5THlwsIkz75uMrmdLr2eYbGE3dGwm-Gn7Q7lXXaTfUn60St4O680SOuQxcwF8EJB6x1yufKDGlk7s&usqp=CAc">My images</a>
+<a href=""></a>
 
 
 
