--- a/home.html
+++ b/home.html
@@ -15,18 +15,29 @@
  <form action="">
     <h3>Send Us a Message</h3>
     <label>First Name</label><br></br>
-    <input type="text"><br><br>
+    <input type="text"placeholder="Fill in Your First Name"><br><br>
     <label>Last Name</label><br><br>
-    <input type="text"><br><br>
+    <input type="text"placeholder="Fill in Your Last Name"><br><br>
     <label>Email </label><br><br>
-    <input type="text"><br><br>
+    <input type="text"placeholder="example@email.com"><br><br>
     <label>Phone Number</label><br><br>
-    <input type="text"><br><br>
+    <input type="tel"placeholder="+256780000000"><br><br>
 
+    <label for=""> Country</label>
+    <select>
+        <option value="Uganda">Uganda</option>
+        <option value="Kenya">Kenya</option>
+        <option value="Rwanda">Rwanda</option>
+        <option value="Tanzania">Tanzania</option>
+        <option value="Burundi">Burundi</option>
+        <option value="S.Sudan">S.Sudan</option>
+        <option value="Burundi">Burundi</option>
 
- </form>
-
-
+        
+    </select>
+    
+ </form><br>
+<button type="Submit">SUBMIT</button>
 
 
 <!-- My form closes here -->
